<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Campuskjøring</string>
    <string name="action_settings">Innstillinger</string>
    <string name="hello_world">Hello world!</string>
    <!--  <string name="fbid">1397782713810671</string>-->
    <string name="fbid">818697398153919</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="settings">Settings</string>
    <string name="fblogin">Facebook test</string>
    <string name="login">Logg inn</string>
    <string name="password">Passord</string>
    <string name="newuser">Opprett ny bruker</string>
    <string name="forgotpassword">Glemt passord?</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_tab_map">TabMap</string>
    <string name="title_activity_tab_list">TabList</string>
    <string name="title_activity_tab_inbox">TabInbox</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tab_listener">TabListener</string>
    <string name="tab_map">Kart</string>
    <string name="tab_list">Liste</string>
    <string name="tab_inbox">Inbox</string>
    <string name="button_alternatelogin">Logg inn med epost</string>
    <string name="forgotpasswordheader">Glemt passord</string>
    <string name="resetpassword">Tilbakestill passord</string>
    <string name="firstname">Fornavn</string>
    <string name="lastname">Etternavn</string>
    <string name="email">Epost (@hiof.no)</string>
    <string name="choosepassword">Velg et passord (minst 7 tegn)</string>
    <string name="repeatpassword">Gjenta passord</string>
    <string name="choosepicture">Velg profilbilde</string>
    <string name="cameraimage">Picture of a camera</string>
    <string name="next">Neste</string>
    <string name="address">Min adresse</string>
    <string name="postal">Postnummer</string>
    <string name="institution">Institusjon</string>
    <string name="campus">Studiested</string>
    <string name="department">Avdeling</string>
    <string name="study">Studie</string>
    <string name="startingyear">Kull</string>
    <string name="carquestion">Har du bil?</string>
    <string name="readconditions">Lest og forstått betingelser</string>
    <string name="finish">Fullfør</string>
    <string name="title_activity_user_information">UserInformationActivity</string>
    <string name="profilepic">Profile picture</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="button_ok">Ok</string>

</resources>
