<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

	<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
		<ImageView
                android:id="@+id/splash_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:contentDescription="Logo"
                android:src="@drawable/campuskjoring_72" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#AFDEFE"
            android:textSize="28sp"
            android:textStyle="italic"
            android:typeface="serif" />

    </LinearLayout>

    <TextView
        android:id="@+id/newUserTxtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:gravity="center"
        android:clickable="true"
        android:onClick="newUserClicked"
        android:text="@string/newuser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/login_editText_email"
        android:layout_below="@id/newUserTxtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_editText_passord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/login_editText_passord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_editText_email"
        android:layout_below="@+id/login_editText_email"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"/>


    <!--
    <TextView
        android:id="@+id/forgotPasswordTxtBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newUserTxtBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:onClick="forgotPasswordClicked"
        android:text="@string/forgotpassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold|italic" />
    -->
    


</RelativeLayout>
